--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/msal-react": "^2.0.15",
     "@nextui-org/react": "^2.2.10",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.28",
